--- a/project4-css/css/new 4.css
+++ b/project4-css/css/new 4.css
@@ -58,7 +58,7 @@ div{display:inline-block;}
 	width:300px;height:300px;
 }
 .command{
-background-image:url('3856.jpg');height:250px;
+background-image:url('../image/3856.jpg');height:250px;
 margin:10px auto;padding:20px;width:100%;
 background-attachment:fixed;
 }
@@ -78,7 +78,7 @@ img{
 	padding:20px
 	}
 .code{
-	background-image:url('sim1.jpg');height:300px;
+	background-image:url('../image/sim1.jpg');height:300px;
 	margin:30px auto;padding:30px;width:1200px;
 	background-attachment:fixed;height:250px
 }
